--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,9 @@ dependencies {
     implementation 'com.google.guava:guava:31.1-jre'
 
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.7'
-
+    testImplementation 'org.mockito:mockito-core:5.4.0'
+    testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.9'
+    testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.9'
 
 
 }
